--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="/js/rating.js"></script>
+    
 
     @*-------Links for checkbox---------*@
 
@@ -550,11 +550,11 @@
 
 
                                             <div id="rating" >
-                                                <i onclick="mecalls(@item.MissionId)" class="far fa-star star" data-value="1"></i>
-                                                <i onclick="mecalls(@item.MissionId)" class="far fa-star star" data-value="2"></i>
-                                                <i onclick="mecalls(@item.MissionId)" class="far fa-star star" data-value="3"></i>
-                                                <i onclick="mecalls(@item.MissionId)" class="far fa-star star" data-value="4"></i>
-                                                <i onclick="mecalls(@item.MissionId)" class="far fa-star star" data-value="5"></i>
+                                                <i  class="rating__star far fa-star star" data-value="1" data-missionid="@item.MissionId"></i>
+                                                <i  class="rating__star far fa-star star" data-value="2" data-missionid="@item.MissionId"></i>
+                                                <i  class="rating__star far fa-star star" data-value="3" data-missionid="@item.MissionId"></i>
+                                                <i class="rating__star far fa-star star" data-value="4" data-missionid="@item.MissionId"></i>
+                                                <i  class="rating__star far fa-star star" data-value="5" data-missionid="@item.MissionId"></i>
                                             </div>
 
                                             
@@ -789,31 +789,31 @@
 
         printRatingResult(ratingResult);
 
-        function executeRating(stars, result) {
-            const starClassActive = "rating__star fas fa-star";
-            const starClassUnactive = "rating__star far fa-star";
-            const starsLength = stars.length;
-            let i;
-            stars.map((star) => {
-                star.onclick = () => {
-                    i = stars.indexOf(star);
+        //function executeRating(stars, result) {
+        //    const starClassActive = "rating__star fas fa-star";
+        //    const starClassUnactive = "rating__star far fa-star";
+        //    const starsLength = stars.length;
+        //    let i;
+        //    stars.map((star) => {
+        //        star.onclick = () => {
+        //            i = stars.indexOf(star);
 
-                    if (star.className.indexOf(starClassUnactive) !== -1) {
-                        // printRatingResult(result, i + 1);
-                        for (i; i >= 0; --i) stars[i].className = starClassActive;
-                    } else {
-                        // printRatingResult(result, i);
-                        for (i; i < starsLength; ++i) stars[i].className = starClassUnactive;
-                    }
-                };
-            });
-        }
+        //            if (star.className.indexOf(starClassUnactive) !== -1) {
+        //                // printRatingResult(result, i + 1);
+        //                for (i; i >= 0; --i) stars[i].className = starClassActive;
+        //            } else {
+        //                // printRatingResult(result, i);
+        //                for (i; i < starsLength; ++i) stars[i].className = starClassUnactive;
+        //            }
+        //        };
+        //    });
+        //}
 
         function printRatingResult(result, num = 0) {
             // result.textContent = `${num}/5`;
         }
 
-        executeRating(ratingStars, ratingResult);
+        //executeRating(ratingStars, ratingResult);
     </script>
     <script>
         function filterChanged()
@@ -982,18 +982,21 @@
 
     </script>
 
-    <script>
+
+
+   @* <script>
         $(function () {
             var rating = $("#rating");
 
-            rating.find(".star").click(function () {
+            $("#rating .star").click(function () {
                 var star = $(this);
                 var stars = star.data("value");
+                 var missionId = star.data("missionid");
 
                 $.ajax({
                     type: "POST",
                     url: "/Home/Rate",
-                    data: { stars: stars },
+                    data: { stars: stars, missionId:missionId},
                     success: function () {
                         rating.find(".star").removeClass("fas").addClass("far");
                         star.prevAll(".star").addBack().removeClass("far").addClass("fas");
@@ -1004,6 +1007,51 @@
 
         
     </script>
+*@
+
+ <script>
+        //$(function () {
+        //    //var rating = $("#rating");
+        //    var rating = $(this).parent().find(".star");
+        //    $("#rating .star").click(function () {
+        //        var star = $(this);
+        //        var stars = star.data("value");
+        //         var missionId = star.data("missionid");
+
+        //        $.ajax({
+        //            type: "POST",
+        //            url: "/Home/Rate",
+        //            data: { stars: stars, missionId:missionId},
+        //            success: function () {
+        //                rating.removeClass("fas").addClass("far");
+        //                star.prevAll(".star").removeClass("far").addClass("fas");
+        //                star.removeClass("far").addClass("fas");
+        //            }
+        //        });
+        //    });
+        //});
+
+        
+    </script>
+             @*var rating=$("#" + $(this).parent().attr('class') + " .star")*@
+
+@*<script>
+
+            $(document).ready(function () {
+                    $(".rating .star").mouseleave(function () {
+                        $("#" + $(this).parent().attr('class') + " .star").each(function () {
+                            $(this).addClass("outline");
+                            $(this).removeClass("filled");
+                        });
+                    });
+                    $(".rating-star-block .star").mouseenter(function () {
+                        var hoverVal = $(this).attr('rating');
+                        $(this).prevUntil().addClass("filled");
+                        $(this).addClass("filled");
+                        $("#RAT").html(hoverVal);
+                    });
+</script>*@
+
     
    <script src="~/js/landing.js"></script>
 
