Improved Add to favourites and Remove from favourites

--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -467,66 +467,53 @@
                         <div>
                                 <img src="~/NewFolder/imgenv.png" class="card-img-top" alt="...">
 
-                                @*<button id="favBtn" class="fav-btn">
-                                    <img src="~/NewFolder/heart1.png">
+                        </div>
+                         <button class="missions">@item.Title</button>
+                            @{
 
-                                </button>*@
-
-                                
-
-                         
-                              @* @{
-                               
-                               
-                               
-                               if (@ViewBag.flag !=null)
+                                if (@ViewBag.favlist.Count == 0)
                                 {
-                                    <button class"btn btn-primary">
-                                        <a onclick="removeFromFavorites(@item.MissionId)"  class="dropdown-item" asp-controller="Home" asp-action="PlatformLandingPage">Remove from Favorites</a>
-                                    </button>
+                                    <i onclick="likeMission(@item.m.MissionId)" class="far fa-heart"></i>
                                 }
-                                if(@ViewBag.flag == null)
+
+                                else
                                 {
-                                    <button class"btn btn-primary">
-                                        <a onclick="addToFavorites(@item.MissionId)"  class="dropdown-item" asp-controller="Home" asp-action="PlatformLandingPage">Add To fav</a>
-                                     </button>
+
+                                    var v = ViewBag.favlist;
+
+                                    for (var i = 0; i < v.Count; i++)
+                                    {
+
+                                        if (@ViewBag.favlist[i].MissionId == item.m.MissionId && @ViewBag.favlist[i].UserId == ViewBag.ids)
+                                        {
+                                            <i onclick="likeMission(@item.m.MissionId)" style="color:red" class="fas fa-heart"></i>
+                                            break;
+
+                                        }
+
+                                        else
+
+                                        {
+                                            if (i == v.Count - 1)
+                                            {
+                                                <i onclick="likeMission(@item.m.MissionId)" class="far fa-heart"></i>
+                                            }
+
+                                        }
+
+                                    }
+
                                 }
-                               
-                               
-                               }
-*@
 
 
 
-
-                                @*<button class="btn btn-primary" onclick="addToFavorites(@item.MissionId)" asp-action="Add" asp-controller="Home">Add to Favorites</button>*@
-                                
+                            }
 
 
-                              @*  <form method="post" asp-action="AddToFavorites" asp-route-itemId="@item.MissionId">
-                                    <button id="mission-button" type="submit">Add to Favorites</button>
-                                </form>
-*@
-
-                        </div>    
-                        
-                            
-                        <button class="missions">@item.Title</button>
-                         <button class"btn btn-primary">
-                                        <a onclick="addToFavorites(@item.MissionId)"  class="dropdown-item" asp-controller="Home" asp-action="PlatformLandingPage">Add To fav</a>
-                                     </button>
-     
-                                  
-                                     <button class"btn btn-primary">
-                                        <a onclick="removeFromFavorites(@item.MissionId)"  class="dropdown-item" asp-controller="Home" asp-action="PlatformLandingPage">Remove from Favorites</a>
-                                     </button>
                             <p>@item.Name</p>
                         <div class="card-body">
                             
-                            
-
-
-
+                           
                             <h4 class="card-title">@item.m.Title</h4>
                             <p class="card-text">@item.m.ShortDescription</p>
                              <div class="combine" style="display: flex;">
