--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -518,35 +518,28 @@
                             <p class="card-text">@item.m.ShortDescription</p>
                              <div class="combine" style="display: flex;">
                                     <div class="row">
-
+                                        @*<div class="d-flex">*@
                                             <div class="col-6">
                                                 <span class="card-text">@item.m.OrganizationName</span>
 
                                             </div>
+                                        
 
-                                            <div class="col-6" style="margin-left: -12%;">
-                                                
-
-
-                                           @* <div id="rating" >
-                                                <i  class="rating__star far fa-star star" data-value="1" data-missionid="@item.MissionId"></i>
-                                                <i  class="rating__star far fa-star star" data-value="2" data-missionid="@item.MissionId"></i>
-                                                <i  class="rating__star far fa-star star" data-value="3" data-missionid="@item.MissionId"></i>
-                                                <i class="rating__star far fa-star star" data-value="4" data-missionid="@item.MissionId"></i>
-                                                <i  class="rating__star far fa-star star" data-value="5" data-missionid="@item.MissionId"></i>
-                                            </div>*@
-
+                                            
                                             @{
                                                 if (@ViewBag.Ratingdata.Count == 0)
                                                 {
-
-                                                    <div id="rating" >
+                                                        
+                                                   
+                                                    
+                                                    <div id="rating" class="d-flex">
                                                         <i  class="rating__star far fa-star star" data-value="1" data-missionid="@item.MissionId"></i>
                                                         <i  class="rating__star far fa-star star" data-value="2" data-missionid="@item.MissionId"></i>
                                                         <i  class="rating__star far fa-star star" data-value="3" data-missionid="@item.MissionId"></i>
                                                         <i class="rating__star far fa-star star" data-value="4" data-missionid="@item.MissionId"></i>
                                                         <i  class="rating__star far fa-star star" data-value="5" data-missionid="@item.MissionId"></i>
                                                     </div>
+                                                  
 
 
                                                 }
@@ -562,7 +555,7 @@
 
                                                     for (i = 0; i < @ViewBag.Ratingdata.Count; i++)
                                                     {
-                                                    //<h1> @ViewBag.Ratingdata[i].MissionId</h1>
+                                                    
                                                         if (@ViewBag.Ratingdata[i].MissionId == @item.MissionId)
                                                         {
                                                             int b = Convert.ToInt32(ViewBag.Ratingdata[i].Rating);
@@ -574,13 +567,14 @@
 
                                                                 if (j <= b)
                                                                 {
-                                                                    <div id="rating">
+
+                                                                    <div id="rating" class="d-flex">
                                                                         <i class="rating__star fas fa-star star" data-value="@j" data-missionid="@item.MissionId"></i>
                                                                     </div>
                                                                 }
                                                                 else
                                                                 {
-                                                                    <div id="rating">
+                                                                    <div class="row d-flex" id="rating">
                                                                     <i class="rating__star far fa-star star" data-value="@j" data-missionid="@item.MissionId"></i>
                                                                 </div>
                                                                 }
@@ -608,16 +602,33 @@
 
                                                
                                             }
-                                           
+
+
+
+
+
+
+
+
+                                           @* <div class="col-6" style="margin-left: -12%;">*@
+                                            @* <div style="display:flex">    *@
+
+                                       
                                             
                                            
                                         
-                                            }
+                                            
 
 
-                                                      </div>
+                                                   
 
-                                                 </div>
+                                                @* </div>*@
+                                            </div>
+
+
+
+
+                                            </div>
 
                                         </div>
                                 
@@ -654,15 +665,23 @@
 
                             <hr class="line-hr">
 
-                            <button class="apply-btn">Apply
+                            @*<button class="apply-btn">Apply
 
                                 <img src="~/NewFolder/right-arrow.png" alt="" class="right-arrow">
 
-                            </button>
+                            </button>*@
+
+
+                            <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.m.MissionId">
+                                <button type="submit" class="apply-btn">
+
+                                Apply <img src="~/NewFolder/right-arrow.png">
+                                </button>
+                            </a>
                         </div>
 
                     </div>
-                </div>
+             @*   </div>*@
                 
                 
     }
@@ -989,120 +1008,14 @@
 
     </script>
 
-    @*for fav btn*@
-
-    <script>
-        //document.getElementById("favBtn").addEventListener("click", function () {
-        //    this.classList.add("clicked");
-        //});
-
-  
-        //function addToFavorites(missionId) {
-
-          
-        //    $.ajax({
-        //        url: '/Favorites/Add',
-        //        type: 'POST',
-        //        data: { missionId: missionId },
-        //        success: function () {
-        //            // Change button color to red
-        //            $('.btn-primary').addClass('btn-danger').removeClass('btn-primary');
-        //        }
-        //    });
-        //}
-
-        function ratingsFun(missionId) {
-            const urlParams = new URLSearchParams(window.location.search);
-            urlParams.set('missionId', missionId);
-
-            const newUrl = window.location.pathname + '?' + urlParams.toString();
-            history.pushState(null, '', newUrl);
-            alert("hello");
-            $.ajax({
-                url: '/Home/SubmitRating',
-                type: 'POST',
-                data: { ratingValue: ratingValue, missionId: missionId },
-                success: function () {
-                    // Change button color to red
-                    // $('.btn-primary').addClass('btn-danger').removeClass('btn-primary');
-                }
-            });
-        }
-
-         
-
-
-    </script>
+   
 
 
 
-   @* <script>
-        $(function () {
-            var rating = $("#rating");
 
-            $("#rating .star").click(function () {
-                var star = $(this);
-                var stars = star.data("value");
-                 var missionId = star.data("missionid");
 
-                $.ajax({
-                    type: "POST",
-                    url: "/Home/Rate",
-                    data: { stars: stars, missionId:missionId},
-                    success: function () {
-                        rating.find(".star").removeClass("fas").addClass("far");
-                        star.prevAll(".star").addBack().removeClass("far").addClass("fas");
-                    }
-                });
-            });
-        });
+   
 
-        
-    </script>
-*@
-
- <script>
-        //$(function () {
-        //    //var rating = $("#rating");
-        //    var rating = $(this).parent().find(".star");
-        //    $("#rating .star").click(function () {
-        //        var star = $(this);
-        //        var stars = star.data("value");
-        //         var missionId = star.data("missionid");
-
-        //        $.ajax({
-        //            type: "POST",
-        //            url: "/Home/Rate",
-        //            data: { stars: stars, missionId:missionId},
-        //            success: function () {
-        //                rating.removeClass("fas").addClass("far");
-        //                star.prevAll(".star").removeClass("far").addClass("fas");
-        //                star.removeClass("far").addClass("fas");
-        //            }
-        //        });
-        //    });
-        //});
-
-        
-    </script>
-             @*var rating=$("#" + $(this).parent().attr('class') + " .star")*@
-
-@*<script>
-
-            $(document).ready(function () {
-                    $(".rating .star").mouseleave(function () {
-                        $("#" + $(this).parent().attr('class') + " .star").each(function () {
-                            $(this).addClass("outline");
-                            $(this).removeClass("filled");
-                        });
-                    });
-                    $(".rating-star-block .star").mouseenter(function () {
-                        var hoverVal = $(this).attr('rating');
-                        $(this).prevUntil().addClass("filled");
-                        $(this).addClass("filled");
-                        $("#RAT").html(hoverVal);
-                    });
-</script>*@
 
     
    <script src="~/js/landing.js"></script>
